# SLAE

./: CMakeLists.txt  README.md  ThreeDiagTest.cpp  ThreeDiagonalMatrix.cpp  three_diag_solver.h
ThreeDiagonal/: ThreeDiagTest.cpp
gtest/: (r,v)_to_Kepler_test.cpp  .gitignore.save  CMakeLists.txt  CompressedMatrixTest.cpp  GausZeid_mpi_YacobiTest.cpp  MPI_Chebishev.cpp  Related_directions_method.cpp  TaskFourTest.cpp  trash.cpp
gtests/: IterationsTest.cpp
src/: CMakeLists.txt  CompressedSparsRow.h  KR2.h  TaskFourTest.cpp  Vector.h
src/Chebishev_MPI/: ChebishevMPI.h  MPI.h
src/CompressedSparsRow/: Sparse Matrix Representations.h
src/CompressedSparsRow/Compressed_spars_row/: CompressedMatrix.h  CompressedMatrixCont.h  CompressedMatrixRepresent.h  MPI.h
src/Compressed_spars_row/: CompressedConverter.h  CompressedConverterMatrixWithZEROS.h  CompressedMatrix.h  CompressedSorting.h  MPI.h  TaskFourTest.cpp
src/Iteration_methods/: ChebishevMPI.h  Grad_spusk.h  Iteration_methods.h  MPI.h  Related_directions_method.h  Symmetric_G_Z.h
src/ThreeDiagonal/: ThreeDiagonalMatrix.h  ThreeDiagonalSolver.h
src/operators/: operators.h
src/rv_to_Kepler/: rv_to_Kepler.h
src/src/Compressed_spars_row/: CompressedConverter.h
